--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Potta+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: ##F8F4FF;
+  --purple-dark: #09001A;
+  --main-purple: #5B00FF;
+  --light-purple: #EFE5FF;
+  --lighter-purple: #7C33FF;
+  --main-light: #FFF4E5;
+  --main-soft: #FC9E48;
+  --main-hard: #FF7A00;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: ##F8F4FF;
+  }
+}
+/* border border-red-500 */
+
+body {
+  font-family: 'Poppins';
+}
+
+@layer components{
+  .onboarding{
+    @apply h-screen w-full bg-[#F8F4FF] overflow-hidden
+  }
+  .onboarding2{
+    @apply h-auto w-full bg-[#FFF4E5] overflow-hidden
+  }
+  header{
+    @apply h-[10vh] w-full bg-white py-3 px-[80px] flex items-center justify-between
+  }
+
+  /* hero styles */
+  .hero{
+    @apply px-[80px]
+  }
+  .hero > div{
+    @apply flex items-center justify-between
+  }
+  .hero-text-head{
+    @apply font-poppins
+  }
+  .hidden-wazobia{
+    @apply hidden
+  }
+
+  
+
+  /* MEDIA QUERIES FOR ONBOARDING STYLES */
+  @media screen and (max-width:768px){
+    .designs > div{
+      @apply w-[200px]
+    }
+    .wazobia h1{
+      @apply text-[100px] hidden
+    }
+    .engage-text h5{
+      @apply max-w-[50%] left-[8rem] top-12
+    }
+    .textbase{
+      @apply w-[300px]
+    }
+    .hidden-wazobia{
+      @apply flex flex-col items-center justify-center -mt-[2rem]
+    }
+    /* BUTTON GROUP MEDIA QUERY */
+    .grp{
+      @apply grid-cols-3
+    }
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer utilities{
+  .rotate-x-180{
+    transform: rotateX(180deg);
+  }
 }
