--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,10 @@ body {
 
   /* SIGNUP FORM STYLES */
   .form-input{
-    @apply rounded-lg w-full py-3 px-5
+    @apply rounded-lg w-full py-3 px-5 
+  }
+  .form-input:focus{
+    @apply outline-none
   }
   .form-input::placeholder{
     @apply text-[#000000] opacity-50
