--- a/app/dashboard/dashboard.module.css
+++ b/app/dashboard/dashboard.module.css
@@ -1,5 +1,5 @@
 .statistics {
-  padding: 0 5rem 0 5rem;
+  padding: 0 5rem;
   width: 100%;
   position: relative;
   overflow: hidden;
@@ -8,33 +8,44 @@
 .statistics h2 {
   font-size: var(--font-lg);
   font-weight: bold;
-  padding: 10px 0 10px 0;
+  padding: 10px 0;
   color: #360099;
 }
 
 .statisticsWrapper {
   background-color: var(--main-purple);
+  display: flex;
+  overflow-x: auto;  /* Enables horizontal scrolling */
+  white-space: nowrap;
+  scroll-snap-type: x mandatory;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 0;
+  border-radius: 10px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  display: flex;
-  overflow-x: auto;
-  align-items: center;
-  justify-content: center;
-  padding: 70px 0 70px 0;
-  border-radius: 10px;
-  scroll-snap-type: x mandatory;
-  white-space: nowrap;
+  scrollbar-width: none; /* Hides scrollbar for Firefox */
 }
-.statisticsWrapper::-webkit-scrollbar{
-  display: none;
+
+@media screen and (max-width: 600px){
+  .statisticsWrapper{
+    justify-content: flex-start;
+    padding: 50px 20px;
+  }
 }
+.statisticsWrapper::-webkit-scrollbar {
+  display: none; /* Hides scrollbar for Chrome & Safari */
+}
+
 .statItems {
   display: flex;
-  gap: 30px;
-  scroll-snap-align: center;
+  gap: 20px;
+  scroll-snap-align: start;
   flex: 0 0 auto;
+  padding: 10px 0;
 }
+
 
 @media screen and (max-width:800px) {
   .statistics {
